2006-08-29  Mart Raudsepp  <leio@dustbite.net>

	* configure.ac: Bump GTK_REQUIRED to 2.10.0 for GtkStatusIcon.
	* src/mud-tray.c: Port to GtkStatusIcon to get rid of libegg.
	Fixes #69909.
	* src/Makefile.am (gnome_mud_SOURCES): Remove eggtrayicon.[ch].
	* src/eggtrayicon.[ch]: Removed.

2006-08-24  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-preferences-window.c, src/mud-window-mudedit.c,
	src/mud-window-mudlist.c: don't wrap gconf_client_get_string()
	calls around g_strdup(), as it leaks the string and
	gconf_client_get_string() already does the right thing.
	* src/mud-parse-alias.c, src/mud-parse-alias.c,
	mud-preferences-window.c, mud-window-mudlist.c: Plug memleaks.

	Thanks to Kjartan Maraas for the pointers.

2006-06-08  Jordi Mallach  <jordi@sindominio.net>

	* plugins/automapper/map.c, ui/prefs.glade,
	gnome-mud.schemas.in: Fix typos and unify some strings.
	Thanks Thierry Moisan. Fixes #328527, #343018.

2006-05-25  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac (IT_PROG_LIBTOOL): Switch to IT_PROG_INTLTOOL and
	bump it to 0.35	for po/LINGUAS support.
	(ALL_LINGUAS): Removed, now in po/LINGUAS.

2006-05-11  Les Harris  <hl.harris@comcast.net>

	* configure.ac: Added two new dependencies for gmud, libpcre-6.0
	for trigger/alias support and gmodule-2.0 for plugin support.

	* src/Makefile.am: Added new files for triggers/aliases to sources.

	* src/mud-connection-view.[ch], src/mud-preferences-window.[ch],
	src/mud-window.[ch], mud-profiles.[ch]: Added in trigger/alias
	support for Gmud.

	* src/mud-regex.[ch], src/mud-parse-base.[ch],
	src/mud-parse-trigger.[ch], src/mud-parse-alias.[ch]: New files
	which implement trigger/alias support.

	* src/mud-connection-view.c, src/modules_api.[ch]: Added a stupid
	hack to allow plugins to gag a line of text from the main terminal.
	I'll remove this with the refactoring of the plugin system.

	* src/mud-window-mudedit.c: Fixed a bug thats been in there since I