@@ -1,3 +1,8 @@
+2006-09-02  Les Harris  <lescom@comcast.net>
+
+	* src/mud-parse-trigger.c, src/mud-parse-alias.c: Fixes a
+	crash due to previous Lestupidy, frees slist properly now.
+
 2006-08-29  Mart Raudsepp  <leio@dustbite.net>
 
 	* configure.ac: Bump GTK_REQUIRED to 2.10.0 for GtkStatusIcon.
